<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/eTDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/stringwihtinthedesc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/minimalratingstr"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/eTRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/eTMinDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/minstr"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/eTMaxDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/maxstr"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="10dp"
                android:text="@string/besttime"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/eTminBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/minstr"
                android:inputType="time" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/eTMaxBT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/maxstr"
                android:inputType="time" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/orderby"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroupOrderBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/raadiodescription"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/description" />

            <RadioButton
                android:id="@+id/radiorating"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <RadioButton
                android:id="@+id/radiodistance"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <RadioButton
                android:id="@+id/radiobt"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/besttime" />
        </RadioGroup>
<RelativeLayout 
android:layout_width="match_parent"
android:layout_height="match_parent" >

        <RadioGroup
            android:id="@+id/radioGroupoOrderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/raadiodesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/descending" />

            <RadioButton
                android:id="@+id/radioasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending" />
        </RadioGroup>
</RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/okstr" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>