<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:stretchColumns="*" 
    android:shrinkColumns="*">

    <TableRow
        android:id="@+id/TableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewTagDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow2"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" >

        <TextView
            android:id="@+id/textViewTagHowFar"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/howfar"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewHowFar"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/textViewTagDistance"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/distance"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_gravity="center"
            android:gravity="center" />

    </TableRow>
    
    <TableRow
        android:id="@+id/TableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" >

        <TextView
            android:id="@+id/textViewTagBestTime"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/besttime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewBestTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="11.111" />

        <TextView
            android:id="@+id/textViewTagBestTimeNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/besttimenick"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewBestTimeNick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:id="@+id/TableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" >

        <TextView
            android:id="@+id/textViewTagRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:gravity="center"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:gravity="center"
            android:text="TextView" />

    </TableRow>

</TableLayout>
